--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
-body, html {
+html {
     height: 100%;
+}
+
+body {
+    
     font-family: 'Arbutus', cursive;
     color: black;
 }
@@ -7,10 +11,8 @@ body, html {
     /* The image used */
     background-image: url("../images/poster-background.jpeg");
 
-	
-
     /* Full height */
-    height: 100%; 
+    height: 100%;
 
     /* Center and scale the image nicely */
     background-position: center;
@@ -32,11 +34,23 @@ canvas {
 }
 
 
-.guessed-display-wrapper,
-.word-display-wrapper {
+#guessed-display,
+#word-display {
 	letter-spacing: 15px;
 }
 
 #word-display:first-letter {
 	text-transform: capitalize;
+}
+
+.letter-input {
+    width: 50px;
+    height: 50px;
+    margin: 5px 0;
+    color: black;
+    background-color: #C19E75;
+}
+
+.letter-input:focus {
+    outline: 0;
 }
