--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,25 @@
-html {
+html, body {
     height: 100%;
 }
 
 body {
-    
     font-family: 'Arbutus', cursive;
     color: black;
-}
-.bg { 
+
     /* The image used */
     background-image: url("../images/poster-background.jpeg");
-
-    /* Full height */
-    height: 100%;
 
     /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.bg { 
+
+}
 
 .card {
 	background-color: #C19E75;
-}
-
-canvas {
-  width: 100%;
-  height: auto;
 }
 
 .title-text {
@@ -37,6 +30,7 @@ canvas {
 #guessed-display,
 #word-display {
 	letter-spacing: 15px;
+    font-size: 28px;
 }
 
 #word-display:first-letter {
@@ -44,8 +38,8 @@ canvas {
 }
 
 .letter-input {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     margin: 5px 0;
     color: black;
     background-color: #C19E75;
