Refactored word selection code. Cleaned up a couple of things.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,10 @@ body {
     outline: 0;
 }
 
+.letter-input:disabled {
+    background-color: black;
+}
+
 .flashit{
   color: black;
     animation: flash linear 1s infinite;
